--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^8.13.2",
     "nodemailer": "^6.10.1",
     "paystack": "^2.0.1",
-    "pdfkit": "^0.17.0"
+    "pdfkit": "^0.17.0",
+    "connect-mongo": "^5.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
